# cmake-examples

./: .gitignore  README.md
basic_executable/: CMakeLists.txt  app.cpp  shape.cpp  shape.h
executable_with_namespace/: CMakeLists.txt  app.cpp
executable_with_namespace/rectangle/: CMakeLists.txt  base.cpp  base.h
executable_with_namespace/shape/: base.cpp  base.h
executable_with_namespace/square/: base.cpp  base.h
executable_with_subdirectories/: CMakeLists.txt  app.cpp
executable_with_subdirectories/shape/: CMakeLists.txt  shape.cpp  shape.h
executable_with_subdirectories/square/: CMakeLists.txt  square.cpp  square.h
header_only_library/: CMakeLists.txt  geometry.h
header_only_library/examples/: example1.cpp
header_only_library/shape/: CMakeLists.txt  shape.h
header_only_library/square/: CMakeLists.txt  square.h
shared_library/: CMakeLists.txt
shared_library/example/: app.cpp
shared_library/shape/: CMakeLists.txt
shared_library/square/: square.cpp  square.h
shared_library_config/geometry/: CMakeLists.txt  geoConfig.cmake
shared_library_config/geometry/square/: CMakeLists.txt  info.h
shared_library_config/mesh/: CMakeLists.txt  app.cpp
